# genesis

./: .gitignore  LICENSE  README.md  demo_alphagenome_mcp.py  demo_biomcp_integration.py  demo_complete_research_loop.py  demo_config.yaml  demo_gget_integration.py  demo_research_loop.py  integrated_demo.py  pyproject.toml  test_biomcp_output.py  test_ollama.py
Ollama_BioMCP/: test_unified_api.py
config/: agent_config.yaml
examples/: basic_usage.py
src/bioagent/: __init__.py  cli.py
src/bioagent/biomcp/: __init__.py  client.py  gget_tools.py  tools.py
src/bioagent/core/: __init__.py  agent.py  models.py  session.py
src/bioagent/mcp/: __init__.py  client.py  registry.py
src/bioagent/ui/: __init__.py  interactive.py
tests/: test_basic.py
